// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies the styles recursively 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "red",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto",
            "margin": 0,
          },
          Array [
            undefined,
            Object {
              "fontFamily": "CircularPro-Book",
            },
          ],
        ]
      }
    >
      bold and red text
    </Text>
  </Text>
</Text>
`;

exports[`renders with additional style properties 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    bold text
  </Text>
</Text>
`;

exports[`renders with the default properties for iOS 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    normal text
  </Text>
</Text>
`;

exports[`supports multiple nested strings 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  <Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto",
            "margin": 0,
          },
          Array [
            undefined,
            Object {
              "fontFamily": "CircularPro-Book",
            },
          ],
        ]
      }
    >
      red normal text 
    </Text>
  </Text>
  <Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto",
            "margin": 0,
          },
          Array [
            undefined,
            Object {
              "fontFamily": "CircularPro-Book",
            },
          ],
        ]
      }
    >
      and red normal text
    </Text>
  </Text>
</Text>
`;

exports[`supports nested styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto",
          "margin": 0,
        },
        Array [
          undefined,
          Object {
            "fontFamily": "CircularPro-Book",
          },
        ],
      ]
    }
  >
    bold text 
  </Text>
  <Text
    style={
      Object {
        "color": "red",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto",
            "margin": 0,
          },
          Array [
            undefined,
            Object {
              "fontFamily": "CircularPro-Book",
            },
          ],
        ]
      }
    >
      and bold-red text
    </Text>
  </Text>
</Text>
`;

exports[`works even with the distant Text nodes 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#171b1e",
        "fontFamily": "CircularPro-Book",
        "fontSize": 14,
        "fontWeight": "normal",
        "letterSpacing": -0.15,
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  <Text>
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Roboto",
            "margin": 0,
          },
          Array [
            undefined,
            Object {
              "fontFamily": "CircularPro-Book",
            },
          ],
        ]
      }
    >
      bold default text
    </Text>
  </Text>
</Text>
`;
